tests/pos/i17394b/_2.scala
//> using options -Wunused:imports

import example.{given, *}

@main def main = ()
